# veltrano-transpiler

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
docs/: ast-query-infrastructure.md  dynamic-rust-interop-design.md  enforce-explicit-conversions.md  hardcoded-values-analysis.md  import-system-design.md  lifetime-labels-draft.md  reference-preparation.md  rust-method-resolution.md  snapshot-testing-guide.md  type-system-design.md  where-clause-representation-analysis.md
examples/: advanced_nested_preparation.vl  advanced_nested_preparation.vl.disabled  advanced_tree_structures.vl  ambiguous_import.fail.vl  basic_function.tuf.expected.rs  basic_function.vl  bump_allocation.kem.expected.rs  bump_allocation.tuf.expected.rs  bump_allocation.vl  bump_allocation.vl.disabled  bump_lifetimes.vl  camel_case  camel_case.vl  clone_ufcs.vl  comment_edge_cases.kem.expected.rs  comment_edge_cases.tuf.expected.rs  comment_edge_cases.vl  comments.kem.expected.rs  comments.tuf.expected.rs  comments.vl  comments_control_flow.kem.expected.rs  comments_control_flow.tuf.expected.rs  comments_control_flow.vl  comments_corner_cases.kem.expected.rs  comments_corner_cases.tuf.expected.rs  comments_corner_cases.vl  comments_data_classes.kem.expected.rs  comments_data_classes.tuf.expected.rs  comments_data_classes.vl  complex_bump_chains.vl  control_flow.tuf.expected.rs  control_flow.vl  data_class_bump_patterns.vl  data_class_bump_patterns.vl.disabled  data_classes.tuf.expected.rs  data_classes.vl  error_reporting_demo.fail.vl  event_system_callbacks.vl  (+57 more)
src/: ast.rs  (+14 more)
(+127 files in other folders)
