[package]
name = "veltrano"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Portfoligno/veltrano-transpiler"
description = "Linguistic exploration of Rust code generation paradigms, written in Rust"
autoexamples = false

[[bin]]
name = "veltrano"
path = "src/main.rs"

[lib]
name = "veltrano"
path = "src/lib.rs"

[dependencies]
