[package]
name = "veltrano"
version = "0.2.3-dev"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Portfoligno/veltrano-transpiler"
description = "Linguistic exploration of Rust code generation paradigms, written in Rust"
autoexamples = false

[[bin]]
name = "veltrano"
path = "src/main.rs"

[lib]
name = "veltrano"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
cargo_metadata = "0.18"
nonempty = "0.10"
colored = "2.1"
